--- a/templates/task_list.html
+++ b/templates/task_list.html
@@ -1,12 +1,15 @@
 <h1>My Todo List</h1>
+<a href="{% url 'task-create' %}">Add Task</a>
 
 <table>
     <tr>
         <th>Item</th>
+        <th></th>
     </tr>
     {% for task in tasks %}
     <tr>
-        <th>{{task.title}}</th>
+        <td>{{task.title}}</td>
+        <td><a href="{% url 'task' task.id %}">View</a></td>
     </tr>
     {% empty %}
         <h3>No items in list</h3>
