--- a/templates/task_form.html
+++ b/templates/task_form.html
@@ -1,5 +1,8 @@
 <h3>Task Form</h3>
 
-<form method="POST" action="" {% csrf_token %}>
-
-</form>"
+<a href="{% url 'tasks' %}">Go back</a>
+<form method="POST" action="">
+    {% csrf_token %}
+    {{form.as_p}}
+    <input type="submit" value="submit">
+</form>
