fixing typo errors

--- a/templates/task_list.html
+++ b/templates/task_list.html
@@ -1,4 +1,4 @@
-{% if request.user.is_autheticated %}
+{% if request.user.is_authenticated %}
     <p>{{request.user}}</p>
     <a href="">Logout</a>
 {% else %}
