--- a/templates/login.html
+++ b/templates/login.html
@@ -7,4 +7,4 @@
 
 </form>
 
-<p>Don't have account? <a href="">Register</a></p>
+<p>Don't have account? <a href="{% url 'register' %}">Register</a></p>
