--- a/templates/login.html
+++ b/templates/login.html
@@ -1,3 +1,6 @@
+{% extends 'main.html' %}
+
+{% block content %}
 <h1>Login</h1>
 
 <form method="POST">
@@ -8,3 +11,4 @@
 </form>
 
 <p>Don't have account? <a href="{% url 'register' %}">Register</a></p>
+{% endblock %}
