--- a/templates/register.html
+++ b/templates/register.html
@@ -1,3 +1,6 @@
+{% extends 'main.html' %}
+
+{% block content %}
 <h1>Register</h1>
 
 <form method="POST">
@@ -8,3 +11,4 @@
 </form>
 
 <p>Already have an account? <a href="">Login</a></p>
+{% endblock %}
