--- a/templates/task_form.html
+++ b/templates/task_form.html
@@ -1,3 +1,7 @@
+{% extends 'main.html' %}
+
+{% block content %}
+
 <h3>Task Form</h3>
 
 <a href="{% url 'tasks' %}">Go back</a>
@@ -6,3 +10,4 @@
     {{form.as_p}}
     <input type="submit" value="submit">
 </form>
+{% endblock %}
