--- a/templates/main.html
+++ b/templates/main.html
@@ -17,6 +17,20 @@
                 padding-top: 50px;
             }
 
+            h1,
+            h2,
+            h3,
+            h4,
+            h5,
+            h6 
+            {
+                font-family: 'Nunito', sans-serif;
+            }
+            a,
+            p {
+                color: #4b5156;
+            }
+
             .container{
                 max-width: 550px;
                 margin: auto;
@@ -24,6 +38,60 @@
                 -webkit-box-shadow: 2px 2px 13px 4px rgba(0, 0, 0, 0.21);
                 box-shadow: 2px 2px 13px 4px rgba(0, 0, 0, 0.21);
 
+            }
+
+            .header-bar{
+                display: flex;
+                justify-content: space-between;
+                color: #fff;
+                padding: 10px;
+                border-radius: 5px 5px 0 0;
+                background: linear-gradient(90deg, #EEA390 0%, #EB796F 43%, #EB796F 100%);
+            }
+
+            .header-bar a {
+                color: rgb(247, 247, 247);
+                text-decoration: none;
+            }
+
+            .task-wrapper {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                padding: 20px;
+                background-color: #fff;
+                border-top: 1px solid rgb(226, 226, 226);
+            }
+
+            .task-title {
+                display: flex;
+            }
+            .task-title a {
+                text-decoration: none;
+                color: #4b5156;
+                margin-left: 10px;
+            }
+
+            .task-complete-icon {
+                height: 20px;
+                width: 20px;
+                border-color: rgb(105, 192, 105);
+                border-radius: 50%;
+            }
+
+            .task-incomplete-icon {
+                height: 20px;
+                width: 20px;
+                border-color: rgb(218, 218, 218);
+                border-radius: 50%;
+            }
+
+            .delete-link {
+                text-decoration: none;
+                font-weight: 900;
+                color: #cf4949;
+                font-size: 22px;
+                line-height: 0;
             }
         </style>
     </head>
@@ -33,5 +101,6 @@
 
 
             {% endblock content %}
+        </div>
     </body>
 </html>
