--- a/templates/register.html
+++ b/templates/register.html
@@ -10,5 +10,5 @@
 
 </form>
 
-<p>Already have an account? <a href="">Login</a></p>
+<p>Already have an account? <a href="{% url 'login' %}">Login</a></p>
 {% endblock %}
