--- a/templates/main.html
+++ b/templates/main.html
@@ -93,6 +93,21 @@
                 font-size: 22px;
                 line-height: 0;
             }
+
+            #search-add-wrapper {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                padding: 10px;
+            }
+
+            #add-link {
+                color: #EB796F;
+                text-decoration: non;
+                font-size: 42px;
+                text-shadow: 1px 1px #81413b;
+            }
+            
         </style>
     </head>
     <body>
