--- a/templates/task_list.html
+++ b/templates/task_list.html
@@ -12,13 +12,15 @@
             <a href="{% url 'login' %}">Login</a>
         {% endif %} 
 </div>
+<div id="search-add-wrapper">
+    <form method="GET" style="margin-top: 20px;display: flex;">
+        <input type="text" name="search-area" value="{{search_input}}">
+        <input type="submit" value="Search">
+    </form>
+    <a id="add-link" href="{% url 'task-create' %}">&#x2b;</a>
+</div>
 
-<a href="{% url 'task-create' %}">Add Task</a>
 
-<form method="GET">
-    <input type="text" name="search-area" value="{{search_input}}">
-    <input type="submit" value="Search">
-</form>
 
 <div class="task-items-wrapper">
     {% for task in tasks %}
