--- a/templates/main.html
+++ b/templates/main.html
@@ -59,7 +59,7 @@
             color: #fff;
             padding: 10px;
             border-radius: 5px 5px 0 0;
-            background: linear-gradient(90deg, #EEA390 0%, #EB796F 43%, #EB796F 100%);
+            background: linear-gradient(#FCCF31 , #F55555)
         }
 
         .header-bar a {
@@ -90,7 +90,7 @@
         .task-complete-icon {
             height: 20px;
             width: 20px;
-            background-color: rgb(105, 192, 105);
+            background-color: rgb(177, 106, 25);
             border-radius: 50%;
         }
 
