--- a/templates/login.html
+++ b/templates/login.html
@@ -1,14 +1,23 @@
 {% extends 'main.html' %}
 
 {% block content %}
-<h1>Login</h1>
 
-<form method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Login">
+<div class="header-bar">
+    <h1>Login</h1>
+</div>
 
-</form>
+<div class="card-body">
+    <form method="POST">
+        {% csrf_token %}
+        {{form.as_p}}
+        <input class="button" type="submit" value="Login">
+    </form>
+    <p>Don't have an account? <a href="{% url 'register' %}">Register</a></p>
+</div>
 
-<p>Don't have account? <a href="{% url 'register' %}">Register</a></p>
-{% endblock %}
+
+
+
+
+
+{% endblock content %}
