--- a/templates/task_form.html
+++ b/templates/task_form.html
@@ -1,13 +1,18 @@
 {% extends 'main.html' %}
-
 {% block content %}
 
-<h3>Task Form</h3>
+<div class="header-bar">
+    <a href="{% url 'tasks' %}">&#8592; Back</a>
+</div>
 
-<a href="{% url 'tasks' %}">Go back</a>
-<form method="POST" action="">
-    {% csrf_token %}
-    {{form.as_p}}
-    <input type="submit" value="submit">
-</form>
-{% endblock %}
+
+<div class="card-body">
+    <form method="POST" action="">
+        {% csrf_token %}
+        {{form.as_p}}
+        <input class="button" type="submit" value="Submit">
+    </form>
+</div>
+
+
+{% endblock content %}
